Update nlp-dict. Increase memory for sbt.